Fixed some of the html tags

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="Banner">How To Train Your Pokemon</div>
-    <div id="Login">
+    <form id="Login" action="" method="post">
       <div class="form-group">
         <label>Username:</label>
         <input
@@ -21,7 +21,7 @@
       <div class="form-group">
       <label>Password:</label>
       <input
-        type="text"
+        type="password"
         placeholder="Enter Password"
         name="password"
         required
@@ -34,6 +34,6 @@
         Don't have an account?
         <a href="register.html">Sign Up</a>
       </p>
-    </div>
+    </form>
   </body>
 </html>
